--- a/index.html
+++ b/index.html
@@ -2,9 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <title>Domein.shop</title>
 </head>
 <body>
+<header>
+    <div class="header-group">
+        <h1>Domein.shop</h1>
+        <h6 class="register-domain">Jouw domeinnaam registreren in slechts 1 minuut!</h6>
+        <form>
+            <input class="domain-input" placeholder="Is jouw domein nog vrij?"></input>
+            <button class="header-button" type="submit">Check beschikbaarheid</button>
+        </form>
+    </div>
+</header>
 
+<main>
+    <section>
+        <div class="customer-reviews">
+            <h2>Wat zeggen klanten over ons</h2>
+            <figure>
+                <span>
+                    <img class="quotation" src="assets/icons/quote-left.png">
+                    <blockquote>
+                    <p>Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer klantvriendelijk. Snelle response, zelfs op momenten dat je het niet verwacht.</p>
+                    </blockquote></span>
+                <span><img src="assets/images/avatar-jane.png"/>
+                    <figcaption><cite>Jane doe, Managing Director</cite></figcaption></span>
+            </figure>
+
+            <figure>
+                <span>
+                <img class="quotation" src="assets/icons/quote-left.png">
+                <blockquote>
+                    <p>Ik ben tevreden over Domein.shop. Met name de snelle reactie op mijn vragen en goede service
+                        maakt dat ik TransIP aan iedereen aanbeveel.</p>
+                </blockquote></span>
+                <span><img src="assets/images/san-3b86301b.jpeg"/>
+                    <figcaption><cite>Jane doe, Managing Director</cite></figcaption></span>
+            </figure>
+        </div>
+
+    </section>
+    <section>
+        <div class="callcenter-group">
+            <h2 class="support-header">Wij staan voor je klaar</h2>
+            <img class="callcenter" src="assets/images/callcenter.jpg"
+                 alt="Twee vriendelijk kijkende mensen in een callcenter"/>
+            <p>Je kunt 7 dagen per week bij ons terecht. Ons <a href="team.html">team</a> van vakkundige medewerkers
+                helpt je graag op weg.</p>
+            <button class="contact-button" type="button">Neem contact op</button>
+
+        </div>
+    </section>
+</main>
+<footer>
+
+</footer>
 </body>
+
 </html>
